# openllmetry

./: .cz.toml  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EarlyAI_README.md  GOVERNANCE.md  IMPLEMENTATION_GUIDE.md  MAINTAINERS.md  README.md  SECURITY.md  experiments-feature-planning.md  gal-guardrail-feedback.md  gender bias  list_attributes.py  nx.json  openllmetry.CodeCanvas  package-lock.json  package.json  pnpm-lock.yaml  poetry.toml  pyproject.toml  pytest.ini  setup.py  test_debug.py  test_streaming_fix.py
.claude/: settings.local.json
.claude/feature_planning/: datasets_feature_plan.md  experiments-feature-planning.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci-traceloop-sdk.yml  ci.yml  fr-pr.yaml  release.yml  run-experiments.yml  safety-pr.yml
docs/: README.md  agent-semantic-conventions.md  introduction.mdx  mint.json
docs/contributing/: overview.mdx
docs/python-sdk/: advanced.mdx  decorators.mdx  exporting.mdx  getting-started.mdx  introduction.mdx  prompts.mdx  threads.mdx
docs/python-sdk/contributing/: developing.mdx
experiments/: run_research_experiment.py
myenv/: pyvenv.cfg
opentelemetry-instrumentation-anthropic/: README.md  pyproject.toml
opentelemetry-instrumentation-chroma/: README.md  pyproject.toml
opentelemetry-instrumentation-cohere/: README.md  pyproject.toml
opentelemetry-instrumentation-openai/: README.md  pyproject.toml
opentelemetry-instrumentation-pinecone/: README.md  pyproject.toml
opentelemetry-instrumentation-weviate/: .flake8  README.md  pyproject.toml
opentelemetry-semconv-llm/: pyproject.toml
opentelemetry/instrumentation/ai_providers/: utils.py
opentelemetry/instrumentation/anthropic/: __init__.py  wrapper.py
sample-app/: .env.example  main.py  pyproject.toml
scripts/: build-release.sh  generate-models.sh  replace-local-deps-versions.sh  run-tests.sh
scripts/codegen/: generate_evaluator_models.py
testEnv/: pyvenv.cfg
testEnv/Scripts/: activate  activate.bat
traceloop-sdk/: README.md  pyproject.toml
